Keerthivasan: Fix text alignment of images at revolutionize tech

--- a/src/styles/revolutionize-tech/_style.scss
+++ b/src/styles/revolutionize-tech/_style.scss
@@ -5,9 +5,7 @@
 }
 
 #revolutionize-tech {
-
   .step {
-
     .title.large-title {
       margin-bottom: 50px;
     }
@@ -35,7 +33,8 @@
       }
 
       .timeline-img {
-        filter: invert(58%) sepia(52%) saturate(439%) hue-rotate(139deg) brightness(88%) contrast(83%);
+        filter: invert(58%) sepia(52%) saturate(439%) hue-rotate(139deg) brightness(88%)
+          contrast(83%);
       }
 
       .timeline-arrow {
@@ -64,13 +63,13 @@
       padding-right: 1.5%;
     }
 
-    .globe-image,
-    .aadhaar-image {
+    .globe-image {
       width: 100%;
     }
 
     .aadhaar-image {
-      margin-left: -21px;
+      width: 103%;
+      margin-left: -4%;
     }
 
     .tech-assets-image {
@@ -83,7 +82,7 @@
       font-size: 22px;
       font-family: var(--font-family-bitter);
 
-      .sub-heading{
+      .sub-heading {
         font-size: 14px;
         font-weight: normal;
         font-family: var(--font-family-inter);
@@ -118,6 +117,5 @@
       border: 1px solid white;
       margin: 50px 0;
     }
-
   }
 }
